// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button snapshot 1`] = `
.c0 {
  line-height: 1.2;
  font-size: 5rem;
  text-transform: uppercase;
  font-family: 'Roboto Condensed',sans-serif;
  font-weight: 400;
  color: inherit;
}

@media (min-width:600px) {

}

<div>
  <span
    class="c0"
  >
    test
  </span>
</div>
`;

exports[`button snapshot 2`] = `
<div>
  <span
    class="Title-xde5hf-0 ialfFr"
  >
    test
  </span>
</div>
`;

exports[`button snapshot 3`] = `
<div>
  <span
    class="Title-xde5hf-0 jISprb"
  >
    test
  </span>
</div>
`;

exports[`button snapshot 4`] = `
<div>
  <span
    class="Title-xde5hf-0 buFXPF"
  >
    test
  </span>
</div>
`;
